# file_chopper

./: LICENSE  README.md  install.py  pyproject.toml
Specifications/: ATS_fess_document_segmenter_v0_5.md  FRS_fess_document_segmenter_v0_5.md
src/file_chopper/: __init__.py  chopper.py  main.py  segmenter.py
tests/: test_acceptance.py  test_chopper.py  test_cli_segment.py  test_segmenter.py
